13 Fix overflow css

--- a/app/assets/stylesheets/initrax.css.scss
+++ b/app/assets/stylesheets/initrax.css.scss
@@ -24,6 +24,8 @@ html, body, .initrax-container.container-fluid {
     background-color: $color1;
     font-weight: normal;
     color: $color3;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
 }
 .initrax-container {
   overflow-y: hidden;
@@ -60,13 +62,16 @@ strong {
    float: none;
 }
 .full-height-row > div {
-  height: 98%;
+  height: 100%;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
 }
 .full-height-row section {
   display: inline-block;
   width: 100%;
   vertical-align: top;
   height: 100%;
+  overflow-y: hidden;
 }
 .initrax-column {
   margin: 4px;
@@ -74,6 +79,7 @@ strong {
   background-color: $color2;
   color: $color3;
   overflow-y: scroll;
+  height: 100%;
   .add-btn {
     margin-bottom: 50px;
   }
@@ -171,6 +177,7 @@ strong {
   }
 }
 .modal {
+    overflow-y: scroll;
     .modal-header, .modal-footer {
         background-color: $color2;
         border: 0px;
